--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 rand = "0.9.0"
 noise = "0.9.0"
+serde_json = "1.0.127"
+serde = { version = "1.0.219", features = ["derive"] }
