--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,8 @@ rand = "0.9.0"
 noise = "0.9.0"
 serde_json = "1.0.127"
 serde = { version = "1.0.219", features = ["derive"] }
+actix-web = "4"
+actix-cors = "0.7.1"
+env_logger = "0.11.8"
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
+http = "0.2.12"
