--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,9 @@
 		"vite": "^6.2.5"
 	},
 	"dependencies": {
-		"granim": "^2.0.0"
+		"@threlte/core": "^8.0.1",
+		"@threlte/extras": "^9.1.0",
+		"granim": "^2.0.0",
+		"three": "^0.175.0"
 	}
 }
